beast_back/examples/apigw-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigw-svc
  namespace: beast
spec:
  selector:
    app: apigw
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
