beast_back/examples/apigw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigw-ingress-1
  namespace: helm
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apigw-svc
            port:
              number: 8080
